package org.example.businessLogic;

public enum SelectionPolicy {SHORTEST_TIME, SHORTEST_QUEUE}
